--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
             aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
             aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+            aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+            aria-label="Slide 8"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -167,32 +177,112 @@
           <div class="carousel-item">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00978.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00978.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00976.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00971.JPG" alt="First slide">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00968.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00967.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00962.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00710.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00705.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00702.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00696.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00696.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00694.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00691.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00688.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00686.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00685.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00680.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00675.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00673.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00672.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00667.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00665.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00664.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00661.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00659.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00385.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00373.JPG" alt="First slide">
               </div>
             </div>
           </div>
