add images gallary

--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -63,65 +63,70 @@
   <!-- ---------------------------------------------------------------------------------------------------------------------- -->
   <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
   <div class="container">
-  <div class="team">
-    <span>OUR <span class="ourtm">NAVRATRI</span></span>
-  </div>
+    <div class="team">
+      <span>OUR <span class="ourtm">NAVRATRI</span></span>
+    </div>
     <div class="card"> 
       <div class="grid-img">
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 144519.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144922.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144201.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132022.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132045.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132139.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132206.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132312.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133844.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133858.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133922.png">
-          <img src="/assests/img/Screenshot 2024-06-12 143725.png">
-          <img src="/assests/img/Screenshot 2024-06-12 143744.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144004.png">
+          <img src="/assests/img/VDS00113.JPG">
+          <img src="/assests/img/VDS00155.JPG">
+          <img src="/assests/img/VDS00242.JPG">
+          <img src="/assests/img/sagar.heic">
+          <img src="/assests/img/VDS09352.JPG">
+          <img src="/assests/img/VDS00996.JPG">
+          <img src="/assests/img/VDS00995.JPG">
+          <img src="/assests/img/VDS00983.JPG">
+          <img src="/assests/img/VDS00978.JPG">
+          <img src="/assests/img/VDS00978.JPG">
+          <img src="/assests/img/VDS00976.JPG">
+          <img src="/assests/img/VDS00971.JPG">
+          <img src="/assests/img/VDS00968.JPG">
+          <img src="/assests/img/VDS00967.JPG">
+          <img src="/assests/img/VDS00962.JPG">
+          <img src="/assests/img/VDS00710.JPG">
+          <img src="/assests/img/VDS00705.JPG">
+          <img src="/assests/img/VDS00702.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 132433.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132330.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132504.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132536.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132701.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132746.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132828.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134017.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134034.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134105.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144023.png">
+          <img src="/assests/img/VDS00114.JPG">
+          <img src="/assests/img/VDS00237.JPG">
+          <img src="/assests/img/VDS00242.JPG">
+          <img src="/assests/img/sagar2.heic">
+          <img src="/assests/img/VDS00696.JPG">
+          <img src="/assests/img/VDS00694.JPG">
+          <img src="/assests/img/VDS00691.JPG">
+          <img src="/assests/img/VDS00691.JPG">
+          <img src="/assests/img/VDS00686.JPG">
+          <img src="/assests/img/VDS00685.JPG">
+          <img src="/assests/img/VDS00680.JPG">
+          <img src="/assests/img/VDS00675.JPG">
+          <img src="/assests/img/VDS00673.JPG">
+          <img src="/assests/img/VDS00672.JPG">
+          <img src="/assests/img/VDS00667.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 133025.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133048.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133135.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133159.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133221.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133243.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133303.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134126.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135619.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135648.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144049.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144141.png">
+          <img src="/assests/img/VDS00116.JPG">
+          <img src="/assests/img/VDS00238.JPG">
+          <img src="/assests/img/himal.jpg">
+          <img src="/assests/img/VDS00665.JPG">
+          <img src="/assests/img/VDS00664.JPG">
+          <img src="/assests/img/VDS00661.JPG">
+          <img src="/assests/img/VDS00659.JPG">
+          <img src="/assests/img/VDS00385.JPG">
+          <img src="/assests/img/VDS00373.JPG">
+          <img src="/assests/img/VDS00370.JPG">
+          <img src="/assests/img/VDS00367.JPG">
+          <img src="/assests/img/VDS00366.JPG">
+          <img src="/assests/img/VDS00286.JPG">
+          <img src="/assests/img/VDS00273.JPG">
+          <img src="/assests/img/VDS00370.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 133405.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133505.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133546.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133627.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133658.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133734.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133819.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135708.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135841.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135857.png">
+          <img src="/assests/img/VDS00119.JPG">
+          <img src="/assests/img/VDS00239.JPG">
+          <img src="/assests/img/VDS00229.JPG">
+          <img src="/assests/img/him2.jpg">
         </div>
       </div>
   </div>
