changes  in image

--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -59,7 +59,7 @@
 
  
   <!-- -----------------------------------------------company---------------------------------------------------------------- -->
-
+  
   <!-- ---------------------------------------------------------------------------------------------------------------------- -->
   <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
   <div class="container">
@@ -73,6 +73,7 @@
           <img src="/assests/img/VDS00155.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar.heic">
+          <img src="/assests/img/jign.heic">
           <img src="/assests/img/VDS09352.JPG">
           <img src="/assests/img/VDS00996.JPG">
           <img src="/assests/img/VDS00995.JPG">
@@ -93,6 +94,7 @@
           <img src="/assests/img/VDS00237.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar2.heic">
+          <img src="/assests/img/jign2.heic">
           <img src="/assests/img/VDS00696.JPG">
           <img src="/assests/img/VDS00694.JPG">
           <img src="/assests/img/VDS00691.JPG">
@@ -109,6 +111,7 @@
           <img src="/assests/img/VDS00116.JPG">
           <img src="/assests/img/VDS00238.JPG">
           <img src="/assests/img/himal.jpg">
+          <img src="/assests/img/jign3.heic">
           <img src="/assests/img/VDS00665.JPG">
           <img src="/assests/img/VDS00664.JPG">
           <img src="/assests/img/VDS00661.JPG">
@@ -127,6 +130,18 @@
           <img src="/assests/img/VDS00239.JPG">
           <img src="/assests/img/VDS00229.JPG">
           <img src="/assests/img/him2.jpg">
+          <img src="/assests/img/grp4.webp">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
+          <img src="/assests/img/">
         </div>
       </div>
   </div>
