--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -70,10 +70,15 @@
       <div class="grid-img">
         <div class="column gallery">
           <img src="/assests/img/VDS00113.JPG">
+          <img src="/assests/img/VDS00029.JPG">
+          <img src="/assests/img/VDS00010.JPG">
           <img src="/assests/img/VDS00155.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar.heic">
           <img src="/assests/img/jign.heic">
+          <img src="/assests/img/grp.heic">
+          <img src="/assests/img/arti.webp">
+          <img src="/assests/img/gr5.webp">
           <img src="/assests/img/VDS09352.JPG">
           <img src="/assests/img/VDS00996.JPG">
           <img src="/assests/img/VDS00995.JPG">
@@ -91,10 +96,15 @@
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00114.JPG">
+          <img src="/assests/img/VDS00026.JPG">
+          <img src="/assests/img/VDS00038.JPG">
           <img src="/assests/img/VDS00237.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar2.heic">
           <img src="/assests/img/jign2.heic">
+          <img src="/assests/img/grp2.webp">
+          <img src="/assests/img/prz.jpg">
+          <img src="/assests/img/gr7.webp">
           <img src="/assests/img/VDS00696.JPG">
           <img src="/assests/img/VDS00694.JPG">
           <img src="/assests/img/VDS00691.JPG">
@@ -109,9 +119,14 @@
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00116.JPG">
+          <img src="/assests/img/VDS00022.JPG">
+          <img src="/assests/img/VDS00041.JPG">
           <img src="/assests/img/VDS00238.JPG">
           <img src="/assests/img/himal.jpg">
           <img src="/assests/img/jign3.heic">
+          <img src="/assests/img/grp3.webp">
+          <img src="/assests/img/gr3.webp">
+          <img src="/assests/img/sgr.heic">
           <img src="/assests/img/VDS00665.JPG">
           <img src="/assests/img/VDS00664.JPG">
           <img src="/assests/img/VDS00661.JPG">
@@ -127,21 +142,19 @@
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00119.JPG">
+          <img src="/assests/img/VDS00013.JPG">
+          <img src="/assests/img/VDS00044.JPG">
+          <img src="/assests/img/VDS00035.JPG">
           <img src="/assests/img/VDS00239.JPG">
           <img src="/assests/img/VDS00229.JPG">
           <img src="/assests/img/him2.jpg">
           <img src="/assests/img/grp4.webp">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
-          <img src="/assests/img/">
+          <img src="/assests/img/art.webp">
+          <img src="/assests/img/gr4.webp">
+          <img src="/assests/img/VDS00002.JPG">
+          <img src="/assests/img/VDS00006.JPG">
+          <img src="/assests/img/VDS00014.JPG">
+          <img src="/assests/img/VDS00017.JPG">
         </div>
       </div>
   </div>
