--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -72,6 +72,7 @@
           <img src="/assests/img/VDS00113.JPG">
           <img src="/assests/img/VDS00029.JPG">
           <img src="/assests/img/VDS00010.JPG">
+          <img src="/assests/img/VDS00014.JPG">
           <img src="/assests/img/VDS00155.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar.heic">
@@ -98,6 +99,7 @@
           <img src="/assests/img/VDS00114.JPG">
           <img src="/assests/img/VDS00026.JPG">
           <img src="/assests/img/VDS00038.JPG">
+          <img src="/assests/img/VDS00017.JPG">
           <img src="/assests/img/VDS00237.JPG">
           <img src="/assests/img/VDS00242.JPG">
           <img src="/assests/img/sagar2.heic">
@@ -121,6 +123,9 @@
           <img src="/assests/img/VDS00116.JPG">
           <img src="/assests/img/VDS00022.JPG">
           <img src="/assests/img/VDS00041.JPG">
+          <img src="/assests/img/VDS00002.JPG">
+          <img src="/assests/img/VDS00083.JPG">
+          <img src="/assests/img/VDS00045.JPG">
           <img src="/assests/img/VDS00238.JPG">
           <img src="/assests/img/himal.jpg">
           <img src="/assests/img/jign3.heic">
