--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -79,7 +79,11 @@
           <img src="/assests/img/jign.heic">
           <img src="/assests/img/grp.heic">
           <img src="/assests/img/arti.webp">
+          <img src="/assests/img/VDS09292.JPG">
           <img src="/assests/img/gr5.webp">
+          <img src="/assests/img/VDS09315.JPG">
+          <img src="/assests/img/VDS09342.JPG">
+          <img src="/assests/img/VDS09371.JPG">
           <img src="/assests/img/VDS09352.JPG">
           <img src="/assests/img/VDS00996.JPG">
           <img src="/assests/img/VDS00995.JPG">
@@ -102,11 +106,14 @@
           <img src="/assests/img/VDS00017.JPG">
           <img src="/assests/img/VDS00237.JPG">
           <img src="/assests/img/VDS00242.JPG">
+          <img src="/assests/img/VDS00273.JPG">
           <img src="/assests/img/sagar2.heic">
           <img src="/assests/img/jign2.heic">
           <img src="/assests/img/grp2.webp">
           <img src="/assests/img/prz.jpg">
           <img src="/assests/img/gr7.webp">
+          <img src="/assests/img/VDS09310.JPG">
+          <img src="/assests/img/VDS09316.JPG">
           <img src="/assests/img/VDS00696.JPG">
           <img src="/assests/img/VDS00694.JPG">
           <img src="/assests/img/VDS00691.JPG">
@@ -127,11 +134,14 @@
           <img src="/assests/img/VDS00083.JPG">
           <img src="/assests/img/VDS00045.JPG">
           <img src="/assests/img/VDS00238.JPG">
+          <img src="/assests/img/VDS00286.JPG">
           <img src="/assests/img/himal.jpg">
           <img src="/assests/img/jign3.heic">
           <img src="/assests/img/grp3.webp">
           <img src="/assests/img/gr3.webp">
           <img src="/assests/img/sgr.heic">
+          <img src="/assests/img/VDS09311.JPG">
+          <img src="/assests/img/VDS09332.JPG">
           <img src="/assests/img/VDS00665.JPG">
           <img src="/assests/img/VDS00664.JPG">
           <img src="/assests/img/VDS00661.JPG">
@@ -160,6 +170,7 @@
           <img src="/assests/img/VDS00006.JPG">
           <img src="/assests/img/VDS00014.JPG">
           <img src="/assests/img/VDS00017.JPG">
+          <img src="/assests/img/VDS09313.JPG">
         </div>
       </div>
   </div>
