changes in images

--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -171,6 +171,8 @@
           <img src="/assests/img/VDS00014.JPG">
           <img src="/assests/img/VDS00017.JPG">
           <img src="/assests/img/VDS09313.JPG">
+          <img src="/assests/img/VDS09506.JPG">
+          <img src="/assests/img/VDS09507.JPG">
         </div>
       </div>
   </div>
