--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -84,6 +84,7 @@
           <img src="/assests/img/VDS09315.JPG">
           <img src="/assests/img/VDS09342.JPG">
           <img src="/assests/img/VDS09371.JPG">
+          <img src="/assests/img/VDS09458.JPG">
           <img src="/assests/img/VDS09352.JPG">
           <img src="/assests/img/VDS00996.JPG">
           <img src="/assests/img/VDS00995.JPG">
@@ -114,11 +115,15 @@
           <img src="/assests/img/gr7.webp">
           <img src="/assests/img/VDS09310.JPG">
           <img src="/assests/img/VDS09316.JPG">
+          <img src="/assests/img/VDS09472.JPG">
+          <img src="/assests/img/VDS09476.JPG">
+          <img src="/assests/img/VDS09513.JPG">
           <img src="/assests/img/VDS00696.JPG">
           <img src="/assests/img/VDS00694.JPG">
           <img src="/assests/img/VDS00691.JPG">
           <img src="/assests/img/VDS00691.JPG">
           <img src="/assests/img/VDS00686.JPG">
+          <img src="/assests/img//VDS09889.JPG">
           <img src="/assests/img/VDS00685.JPG">
           <img src="/assests/img/VDS00680.JPG">
           <img src="/assests/img/VDS00675.JPG">
@@ -142,10 +147,12 @@
           <img src="/assests/img/sgr.heic">
           <img src="/assests/img/VDS09311.JPG">
           <img src="/assests/img/VDS09332.JPG">
+          <img src="/assests/img/VDS09475.JPG">
           <img src="/assests/img/VDS00665.JPG">
           <img src="/assests/img/VDS00664.JPG">
           <img src="/assests/img/VDS00661.JPG">
           <img src="/assests/img/VDS00659.JPG">
+          <img src="/assests/img//VDS09893.JPG">
           <img src="/assests/img/VDS00385.JPG">
           <img src="/assests/img/VDS00373.JPG">
           <img src="/assests/img/VDS00370.JPG">
@@ -173,6 +180,19 @@
           <img src="/assests/img/VDS09313.JPG">
           <img src="/assests/img/VDS09506.JPG">
           <img src="/assests/img/VDS09507.JPG">
+          <img src="/assests/img/VDS09475.JPG">
+          <img src="/assests/img//VDS09514.JPG">
+          <img src="/assests/img//VDS09520.JPG">
+          <img src="/assests/img//VDS09526.JPG">
+          <img src="/assests/img//VDS09529.JPG">
+          <img src="/assests/img//VDS09651.JPG">
+          <img src="/assests/img//VDS09654.JPG">
+          <img src="/assests/img//VDS09763.JPG">
+          <img src="/assests/img//VDS09864.JPG">
+          <img src="/assests/img//VDS09874.JPG">
+          <img src="/assests/img//VDS09894.JPG">
+          <img src="/assests/img//VDS09616.JPG">
+          <img src="/assests/img//VDS09621.JPG">
         </div>
       </div>
   </div>
