--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -99,6 +99,12 @@
           <img src="/assests/img/VDS00710.JPG">
           <img src="/assests/img/VDS00705.JPG">
           <img src="/assests/img/VDS00702.JPG">
+          <img src="/assests/img//VDS09997.JPG">
+          <img src="/assests/img/VDS00769.JPG">
+          <img src="/assests/img/VDS00796.JPG">
+          <img src="/assests/img/VDS00891.JPG">
+          <img src="/assests/img/VDS00072.JPG">
+          <img src="/assests/img/VDS00052.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00114.JPG">
@@ -130,6 +136,12 @@
           <img src="/assests/img/VDS00673.JPG">
           <img src="/assests/img/VDS00672.JPG">
           <img src="/assests/img/VDS00667.JPG">
+          <img src="/assests/img//VDS09993.JPG">
+          <img src="/assests/img/VDS00771.JPG">
+          <img src="/assests/img/VDS00814.JPG">
+          <img src="/assests/img/VDS00895.JPG">
+          <img src="/assests/img/VDS00714.JPG">
+          <img src="/assests/img/VDS00056.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00116.JPG">
@@ -161,6 +173,13 @@
           <img src="/assests/img/VDS00286.JPG">
           <img src="/assests/img/VDS00273.JPG">
           <img src="/assests/img/VDS00370.JPG">
+          <img src="/assests/img//VDS09987.JPG">
+          <img src="/assests/img/VDS00781.JPG">
+          <img src="/assests/img/VDS00816.JPG">
+          <img src="/assests/img/VDS00897.JPG">
+          <img src="/assests/img/VDS00724.JPG">
+          <img src="/assests/img/VDS00075.JPG">
+          <img src="/assests/img/VDS00058.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00119.JPG">
@@ -193,6 +212,12 @@
           <img src="/assests/img//VDS09894.JPG">
           <img src="/assests/img//VDS09616.JPG">
           <img src="/assests/img//VDS09621.JPG">
+          <img src="/assests/img/VDS00006.JPG">
+          <img src="/assests/img/VDS00782.JPG">
+          <img src="/assests/img/VDS00844.JPG">
+          <img src="/assests/img/VDS00720.JPG">
+          <img src="/assests/img/VDS00718.JPG">
+          <img src="/assests/img/VDS00057.JPG">
         </div>
       </div>
   </div>
