--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -105,6 +105,7 @@
           <img src="/assests/img/VDS00891.JPG">
           <img src="/assests/img/VDS00072.JPG">
           <img src="/assests/img/VDS00052.JPG">
+          <img src="/assests/img/VDS00060.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00114.JPG">
@@ -142,6 +143,7 @@
           <img src="/assests/img/VDS00895.JPG">
           <img src="/assests/img/VDS00714.JPG">
           <img src="/assests/img/VDS00056.JPG">
+          <img src="/assests/img/VDS00063.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00116.JPG">
@@ -180,6 +182,7 @@
           <img src="/assests/img/VDS00724.JPG">
           <img src="/assests/img/VDS00075.JPG">
           <img src="/assests/img/VDS00058.JPG">
+          <img src="/assests/img/VDS00066.JPG">
         </div>
         <div class="column gallery">
           <img src="/assests/img/VDS00119.JPG">
@@ -218,6 +221,7 @@
           <img src="/assests/img/VDS00720.JPG">
           <img src="/assests/img/VDS00718.JPG">
           <img src="/assests/img/VDS00057.JPG">
+          <img src="/assests/img/VDS00065.JPG">
         </div>
       </div>
   </div>
