--- a/assests/pages/Booking.html
+++ b/assests/pages/Booking.html
@@ -18,9 +18,9 @@
     <div class="booking position-absolute top-50 start-50 translate-middle">
         <div class="align-items-center">
             <div class="heading">
-            <p class="h1 text-center">Garba Passes Coming Soon!</p>
+            <p class="h1 text-center">Coming Soon!</p>
         </div>
-            <p class="h4 text-center">Thank you for your incredible enthusiasm for our Garba Night event! We are excited to announce that
+            <p class="h4 text-center">Thank you for your incredible enthusiasm for our Events! We are excited to announce that
                 passes will be available soon.Please stay tuned and check back regularly, or follow us on <span><a href="https://www.instagram.com/avsar__events9?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> Instagram </a></span> for immediate updates on the
                 release. We appreciate your patience and can't wait to celebrate with you!
                 <br><br>
