--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link" href="/assests/pages/contact.html">CONTACTS</a>
           </li>
         </ul>
-        <a class="button type1 mb-lg-auto m-auto" href="https://www.mepass.in/events/ramzat-2024">
+        <a class="button type1 mb-lg-auto m-auto" href="/assests/pages/Booking.html">
           <span class="btn-txt">Get Pass</span>
         </a>
       </div>
@@ -76,7 +76,7 @@
     </div>
   </div>
 
-  <div class="container-background">
+  <!-- <div class="container-background">
     <div class="time-wrapper">
       <div class="time-content col-lg-8 col-md-9 col-11 p-lg-5 p-md-5 p-sm-3 p-2 rounded-5">
         <h1 class="heading">WE ARE COMING SOON</h1>
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="video">
       <div class="container">
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div class="booking py-5">
+    <!-- <div class="booking py-5">
       <div class="container">
         <P class="heading h1">Get Your Pass Now</P>
         <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- -----------------------------------------------Gallery Carousel---------------------------------------------------------------- -->
     <div class="slider-container2 container py-4">
