--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <div class="row gap-0 row-gap-5 grid ">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <iframe class="rounded-4" width="460" height="250" src="https://www.youtube.com/embed/6VG0f7J8Rtc?si=k5Q_5cIA3_17qD6e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <iframe class="rounded-4" width="460" height="250" src="https://www.youtube.com/embed/6VG0f7J8Rtc?si=k5Q_5cIA3_17qD6e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <iframe class="rounded-4" width="460" height="250" src="https://www.youtube.com/embed/6VG0f7J8Rtc?si=k5Q_5cIA3_17qD6e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+          
+            </div>
+          </div>
+          <!-- <div class="carousel-item">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
                 <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
@@ -344,23 +358,7 @@
                 <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-            </div>
-          </div>
+          </div> -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
           data-bs-slide="prev">
